# gday-old

./: .gitignore  Cargo.toml  README.md  TODO.txt  protocol-format.md  psend.crt.der
gday/: Cargo.toml
gday-chat/: Cargo.toml
gday-chat/src/: chat.rs  file_dialog.rs  file_transfer.rs  lib.rs  protocol.rs
gday-encryption/: Cargo.toml
gday-encryption/src/: lib.rs  old_writer.rs  reader.rs  reader_progress.rs  tests.rs  writer.rs  writer_progress.rs
gday-hole-punch/: Cargo.toml
gday-hole-punch/src/: lib.rs  server.rs
gday-hole-punch/src/client/: contact_sharer.rs  peer_connector.rs
gday-hole-punch/src/client/contact_sharer/: server_connection.rs
gday-hole-punch/src/server/: connection_handler.rs  global_state.rs
gday-server/: Cargo.toml
gday/src/: base32.rs  main.rs  server_connector.rs
gday_chat/src/: chat.rs
gday_encryption/src/: lib.rs  reader.rs  tests.rs  writer.rs
gday_hole_punch/: Cargo.toml
gday_hole_punch/src/: client.rs  lib.rs  server.rs
gday_hole_punch/src/client/: contact_sharer.rs  peer_connector.rs
gday_hole_punch/src/client/contact_sharer/: server_connection.rs
gday_hole_punch/src/server/: connection_handler.rs  global_state.rs
gday_server/: Cargo.toml
gday_server/src/: main.rs
old/: old_connection_handler.rs  old_protocol.rs  old_protocol_2.rs
old-src/: protocol.rs
old-src/client/: file_dialog.rs  holepuncher.rs  server_connection.rs
old-src/server/: connection_handler.rs
src/: connection_handler.rs  enum_protocol.rs  global_state.rs  lib.rs  main.rs  protocol.rs  state.rs
src/client/: cert_authority.der  chat.rs  chat_old.rs  contact_share.rs  encrypted_connection.rs  establisher.rs  file_dialog.rs  holepuncher.rs  mod.rs  peer_connection.rs  server_connection.rs
src/server/: global_state.rs  mod.rs
