[package]
name = "holepunch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
clap = { version = "4.4.2", features = ["derive"] }
futures = "0.3.28"
postcard = { version = "1.0.7", features = ["use-std"] }
rand = "0.8.5"
serde = "1.0.188"
spake2 = { version = "0.4.0", features = ["std"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["net", "macros", "rt-multi-thread", "io-util", "sync", "io-std", "time"] }
tokio-rustls = "0.24.1"
