[package]
name = "gday-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.7"
postcard = { version = "1.0.7", features = ["use-std"] }
rustyline-async = "0.4.0"
serde = "1.0.188"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["fs", "io-util", "macros"] }
