[package]
name = "gday-encryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = { version = "0.5.2", features = ["bytes"] }
bytes = "1.5.0"
chacha20poly1305 = { version = "0.10.1", features = ["stream", "heapless", "reduced-round", "std"] }
net = "0.1.0"
pin-project = "1.1.3"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["io-util", "net"] }
