[package]
name = "gday-hole-punch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
futures = { version = "0.3.28" }
postcard = { version = "1.0.7", features = ["use-std", "experimental-derive"] }
rand = "0.8.5"
serde = "1.0.188"
sha2 = { version = "0.10.7" }
socket2 = "0.5.4"
spake2 = { version = "0.4.0", features = ["std"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = [
    "io-util",
    "sync",
    "rt-multi-thread",
    "time",
    "net",
] }
tokio-rustls = "0.24.1"
