[package]
name = "gday"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
gday-chat = { version = "0.1.0", path = "../gday-chat" }
gday-encryption = { version = "0.1.0", path = "../gday-encryption" }
gday-hole-punch = { version = "0.1.0", path = "../gday-hole-punch" }
tokio = "1.32.0"
