[package]
name = "gday-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
gday-hole-punch = { path = "../gday_hole_punch", features = ["server"] }
socket2 = "0.5.4"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
tokio-rustls = "0.24.1"
